@@ -294,7 +294,7 @@ public class CompletionProvider {
               item.setKind(CompletionItemKind.Method);
               return item;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -355,7 +355,7 @@ public class CompletionProvider {
               item.setKind(CompletionItemKind.Keyword);
               return item;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
