@@ -3,7 +3,6 @@ package nl.ramsolutions.sw.magik.languageserver.documentsymbols;
 import com.sonar.sslr.api.AstNode;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikTypedFile;
 import nl.ramsolutions.sw.magik.Range;
 import nl.ramsolutions.sw.magik.analysis.definitions.BinaryOperatorDefinition;
@@ -41,7 +40,7 @@ public class DocumentSymbolProvider {
     return magikFile.getDefinitions().stream()
         .map(this::convertDefinition)
         .map(Either::<org.eclipse.lsp4j.SymbolInformation, DocumentSymbol>forRight)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private DocumentSymbol convertDefinition(final Definition definition) {
@@ -54,8 +53,7 @@ public class DocumentSymbolProvider {
             symbolKind,
             Lsp4jConversion.rangeToLsp4j(new Range(definitionNode)),
             Lsp4jConversion.rangeToLsp4j(new Range(definitionNode)));
-    if (definition instanceof ExemplarDefinition) {
-      final ExemplarDefinition exemplarDefinition = (ExemplarDefinition) definition;
+    if (definition instanceof ExemplarDefinition exemplarDefinition) {
       final List<DocumentSymbol> slotSymbols =
           this.convertedSlotsFromDefinition(exemplarDefinition);
       documentSymbol.setChildren(slotSymbols);
@@ -86,6 +84,6 @@ public class DocumentSymbolProvider {
                     SymbolKind.Field,
                     Lsp4jConversion.rangeToLsp4j(new Range(slotDefinition.getNode())),
                     Lsp4jConversion.rangeToLsp4j(new Range(slotDefinition.getNode()))))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
